--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,47 +1,50 @@
-<h1>Sign Up</h1>
+<section class="user-form">
 
-<%= form_tag(users_url, method: 'post', multipart: true) do %>
-  <div>
-    <%= label_tag :first_name %><br />
-    <%= text_field_tag :first_name %>
-  </div>
+  <img src="https://s3.amazonaws.com/cbgriffin/banner.png" class="banner">
 
-  <div>
-    <%= label_tag :last_name %><br />
-    <%= text_field_tag :last_name %>
-  </div>
+  <h2>Sign Up</h2>
 
-  <div>
-    <%= label_tag :email %><br />
-    <%= text_field_tag :email %>
-  </div>
+  <%= form_tag(users_url, method: 'post', multipart: true) do %>
+    <div>
+      <%= text_field_tag :first_name, nil, placeholder: "First name" %>
+    </div>
 
-  <div>
-    <%= label_tag :username %><br />
-    <%= text_field_tag :username %>
-  </div>
+    <div>
+      <%= text_field_tag :last_name, nil, placeholder: "Last name" %>
+    </div>
 
-  <div>
-    <%= label_tag :password %><br />
-    <%= text_field_tag :password %>
-  </div>
+    <div>
+      <%= text_field_tag :email, nil, placeholder: "Email address" %>
+    </div>
 
-  <div>
-    <%= label_tag :password_confirmation %><br />
-    <%= text_field_tag :password_confirmation %>
-  </div>
+    <div>
+      <%= text_field_tag :username, nil, placeholder: "Username" %>
+    </div>
 
-  <div>
-    <%= label_tag :birthday %><br />
-    <%= text_field_tag :birthday %>
-  </div>
+    <div>
+      <%= text_field_tag :password, nil, placeholder: "Password" %>
+    </div>
 
-  <div>
-    <%= label_tag :avatar %><br />
-    <%= file_field_tag :avatar %>
-  </div>
+    <div>
+      <%= text_field_tag :password_confirmation, nil, placeholder: "Confirm your password" %>
+    </div>
 
-  <div>
-    <%= submit_tag "Create User" %>
-  </div>
-<% end %>
+    <div>
+      <%= label_tag :birthday %><br />
+      <%= text_field_tag :birthday %>
+    </div>
+
+    <div>
+      <%= label_tag :avatar %><br />
+      <%= file_field_tag :avatar %>
+    </div>
+
+    <div>
+      <%= submit_tag "Create User" %>
+    </div>
+  <% end %>
+
+</section>
+
+
+
