--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
 <section class="user-form">
 
-  <img src="https://s3.amazonaws.com/cbgriffin/banner.png" class="banner">
+ <!--  <img src="https://s3.amazonaws.com/cbgriffin/banner.png" class="banner"> -->
 
-  <h2>Sign Up</h2>
+ <%= image_tag 'banner_sign_up.png', :class => "reset_banner" %>
 
   <%= form_tag(users_url, method: 'post', multipart: true) do %>
     <div>
