--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -41,6 +41,8 @@ $main-purple: #2E3666;
     margin-bottom: 10px;
     font-size: 18px;
     border: 1px solid black;
+    font-family: 'Open Sans Condensed', sans-serif;
+    padding-left: 10px;
   }
 
   img {
