--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,41 +4,52 @@
 
  <%= image_tag 'banner_sign_up.png', :class => "reset_banner" %>
 
-  <%= form_tag(users_url, method: 'post', multipart: true) do %>
+  <%= form_tag(users_url, method: 'post', multipart: true, data: {abide: true}) do %>
 
       <%= text_field_tag :first_name, nil, placeholder: "First name" %>
 
       <%= text_field_tag :last_name, nil, placeholder: "Last name" %>
 
-      <%= text_field_tag :email, nil, placeholder: "Email address", class: "field-check" %>
+      <div>
+      <%= text_field_tag :email, nil, placeholder: "Email address", class: "field-check", required:true, pattern: "email"%>
 
-        <p class="warning">*Your e-mail doesnt look right...</p>
+        <small class="error">*Your e-mail doesnt look right...</small>
+      </div>
 
-      <%= text_field_tag :username, nil, placeholder: "Username", class: "field-check" %>
+      <div>
+        <%= text_field_tag :username, nil, placeholder: "Username", class: "field-check", required:true, pattern: "alpha" %>
 
-        <p class="warning">*This is not a valid username...</p>
+        <small class="error">*This is not a valid username...</small>
+      </div>
 
+      <div>
+        <%= text_field_tag :password, nil, placeholder: "Password", class: "field-check", required:true, pattern: "password" %>
 
-      <%= text_field_tag :password, nil, placeholder: "Password", class: "field-check" %>
+          <small class="error">*This is not a valid password...</small>
+      </div>
 
-        <p class="warning">*This is not a valid password...</p>
-
-
-      <%= text_field_tag :password_confirmation, nil, placeholder: "Confirm your password" %>
-
-
-      <%= label_tag :birthday %><br />
-      <%= text_field_tag :birthday %>
-
-
-      <%= label_tag :avatar %><br />
-      <%= file_field_tag :avatar %>
+        <br>
 
 
-      <%= submit_tag "Create User" %>
+
+    <div>
+      <%= label_tag :birthday, nil, class: "birthday" %><br>
+      <%= date_field_tag :birthday %>
+    </div>
+
+    <div>
+      <%= label_tag :avatar %>
+      <%= file_field_tag :avatar, class: "avatar" %>
+    </div>
+
+    <%= check_box_tag 'accept', class: "check_box" %> Accept Terms
+
+
+    <%= submit_tag "Submit!", class: "submit" %>
+
+
   <% end %>
 
 </section>
-
 
 
