--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -36,7 +36,7 @@
 
 // We use these to control various global styles
 $body-bg: #fff;
-$body-font-color: red;
+$body-font-color: #2E3666;
 $body-font-family: 'Open Sans Condensed', sans-serif;
 $body-font-weight: normal;
 $body-font-style: normal;
@@ -52,7 +52,7 @@ $body-font-style: normal;
 // We use these as default colors throughout
 // $primary-color: #008CBA;
 // $secondary-color: #e7e7e7;
-$alert-color: #8e44ad;
+$alert-color: lighten(#2E3666, 15%);
 // $success-color: #43AC6A;
 // $warning-color: #f08a24;
 // $info-color: #a0d3e8;
