Added other forms

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -23,7 +23,7 @@
       </div>
 
       <div>
-        <%= text_field_tag :password, nil, placeholder: "Password", class: "field-check", required:true, pattern: "password" %>
+        <%= password_field_tag :password, nil, placeholder: "Password", class: "field-check", required:true, pattern: "password" %>
 
           <small class="error">*This is not a valid password...</small>
       </div>
