--- a/app/views/forms/reset.html.erb
+++ b/app/views/forms/reset.html.erb
@@ -3,14 +3,16 @@
   <!--   <img src="/assets/images/banner_reset.png" class="banner"> -->
   <%= image_tag 'banner_reset.png', :class => "reset_banner" %>
 
-  <%= form_tag(users_url, method: 'post') do %>
+  <%= form_tag(users_url, method: 'post', multipart: true, data: {abide: true}) do %>
+
+      <div>
+        <%= password_field_tag :password, nil, placeholder: "New Password", class: "field-check", required:true, pattern: "password" %>
+
+          <small class="error">*This is not a valid password...</small>
+      </div>
 
     <div>
-      <%= text_field_tag :new_password, nil, :placeholder => "New Password" %>
-    </div>
-
-    <div>
-      <%= submit_tag "Sign In" %>
+      <%= submit_tag "Reset Password", class: "submit" %>
     </div>
   <% end %>
 
