--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -4,6 +4,9 @@
 
 // Global templates
 
+html {
+  height: 100%;
+}
 
 $main-red: #c0392b;
 $main-purple: #2E3666;
@@ -102,6 +105,7 @@ $main-purple: #2E3666;
     div {
       margin: 0 auto;
       width: 75%;
+
     }
 
     .check_box {
@@ -136,6 +140,7 @@ $main-purple: #2E3666;
 // Global tags
 
 body {
+  height: 100%;
 	@extend %container;
 	font-family: 'Open Sans Condensed', sans-serif;
   // $main-red: #c0392b;
@@ -157,6 +162,15 @@ section {
     @extend %formpanel;
   }
 
-
 }
 
+
+footer {
+  color: $main-purple;
+  text-align: center;
+  width:100%;
+  position: absolute;
+  clear:both;
+  bottom: 15px;
+
+}
