--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,5 +17,11 @@
 
     <%= yield %>
     <%= javascript_include_tag "application" %>
+
+    <footer>
+      Banner Social © 2014 
+
+    </footer>
+
   </body>
 </html>
