--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -83,18 +83,26 @@ $main-purple: #2E3666;
     .avatar_checkbox {
       display: inline;
       width: 100%;
+      height: 35px;
+      
+        .avatar {
+          border: none;
+          margin-left: 14%;
+          // width: 100%;
+        }
 
-      .avatar_label {
-        text-align: left;
-        font-size: 18px;
-        margin-left: 14%;
+        .avatar_label {
+          text-align: left;
+          margin-left: 15%;
+          font-size: 18px;
+ 
+
+        }
+
+        input[type="file"] {
+          
+        }
       }
-      .avatar {
-        border: none;
-        margin-left: 14%;
-        // width: 100%;
-      }
-    }
 
     .birthday {
       margin-left: -80%;
@@ -118,6 +126,8 @@ $main-purple: #2E3666;
         font-size: 17px;
       }
     }
+
+    
 
     p {
 
