changed invalid pw message

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -29,7 +29,7 @@
       <div>
         <%= password_field_tag :password, nil, placeholder: "Password", class: "field-check", required:true, pattern: "password" %>
 
-          <small class="error">*This is not a valid password...</small>
+          <small class="error">*This is not a valid password...(Use a capital letter, number, and a symbol, please!)</small>
       </div>
 
     <div>
@@ -40,16 +40,16 @@
     <div class="avatar_checkbox">
       <%= label_tag :avatar, nil, class: "avatar_label" %>
 
-      <%= file_field_tag :avatar, class: "avatar" %> 
+      <%= file_field_tag :avatar, class: "avatar" %>
 
     </div>
 
-  
+
 
     <div class="check_box">
     <%= check_box_tag 'accept', class: "check_box" %><p>I agree to the <a href="#">Terms & Conditions</p></a>
     </div>
-   
+
 
 
     <%= submit_tag "Submit!", class: "submit" %>
