Added Show password and took password character requirements off

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -79,6 +79,12 @@ $main-purple: #2E3666;
       border: none;
 
     }
+
+    .forgot_password {
+      text-align: left;
+      margin-left: 5px;
+    }
+
     
     .avatar_checkbox {
       display: inline;
