--- a/app/assets/stylesheets/_library.scss
+++ b/app/assets/stylesheets/_library.scss
@@ -13,3 +13,18 @@
     border-style: solid;
     border-width: $thickness;
 }
+
+$break-small: 455px;
+$break-large: 1050px;
+
+@mixin respond-to($media) {
+    @if $media == handheld {
+        @media only screen and (max-width: $break-small) { @content; }
+    }
+    @else if $media == tablet {
+        @media only screen and (min-width: $break-small + 1) and (max-width: $break-large - 1) { @content; }
+    }
+    @else if $media == desktop {
+        @media only screen and (min-width: $break-large) { @content; }
+    }
+}
