--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "forms" %></title>
+    <title>Banner Social<%= content_for?(:title) ? yield(:title) : "forms" %></title>
 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "vendor/modernizr" %>
@@ -22,7 +22,6 @@
 
     <footer>
       Banner Social © 2014 
-
     </footer>
 
   </body>
