Updated, added date picker, JS still not working.

--- a/app/views/forms/forgot.html.erb
+++ b/app/views/forms/forgot.html.erb
@@ -11,7 +11,7 @@
         <small class="error">*Your e-mail doesnt look right...</small>
       </div>
 
-      <p>Click submit and you'll get an e-mail from us shortly. Help is on the way!</p>
+      Click submit and you'll get an e-mail from us shortly!
 
     <div>
       <%= submit_tag "Submit", class: "submit" %>
