Fixed JS Problems

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -58,7 +58,7 @@
 
     <br>
 
-    <%= link_to "Already signed up...", '/login' %>
+    <%= link_to "Already signed up? Sign in!", '/login' %>
 
 
   <% end %>
