Date Picker Works

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -66,6 +66,10 @@ $main-purple: #2E3666;
       left: 40px;
   }
 
+  .date_popup {
+    color: $main-purple;
+  }
+
   form {
     margin-top: 140px;
 
