--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -34,9 +34,8 @@
       </div>
 
     <div>
-      <%= label_tag :birthday, nil, class: "birthday" %><br>
        <!-- date_field_tag :birthday  -->
-      <%= date_field_tag :birthday , nil, placeholder: "Birthday", id: "datepicker", title: "Birthday" %>
+      <%= date_field_tag :birthday , nil, placeholder: "Birthday", class: "datepicker date_popup", title: "Birthday" %>
     </div>
 
     <div class="avatar_checkbox">
