Updated border property

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -253,7 +253,7 @@ footer {
       color: white;
       margin-top: 20px;
       margin-bottom: 20px;
-      border: none;
+      border: 0;
 
     }
 
