Updated Mailers - added confirmation mailer

--- a/app/views/user_mailer/reset.html.erb
+++ b/app/views/user_mailer/reset.html.erb
@@ -3,7 +3,7 @@ Dear <%= @user.name %>,
 Please use the link below to reset your password. 
 
 Username: @user.username
-Password: <link rel="stylesheet" href="http://localhost:3000/reset">Reset Your password!
+Password: <link rel="stylesheet" href="http://banner-social.herokuapp.com/reset">Reset Your password!
 
 Thank you and have a great day! 
 
