--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,3 +1,6 @@
 Dear <%= @user.name %>,
 
-Thanks for signing-up for our service!
+Thanks for signing-up for our Banner Social, please let us know if you have any questions. 
+
+Sincerely, 
+Banner Social Team 
