--- a/app/views/forms/forgot.html.erb
+++ b/app/views/forms/forgot.html.erb
@@ -3,10 +3,10 @@
   <!--   <img src="/assets/images/banner_reset.png" class="banner"> -->
   <%= image_tag 'banner_forgot.png', :class => "reset_banner" %>
 
-  <%= form_tag(users_url, method: 'post', multipart: true, data: {abide: true}) do %>
+  <%= form_tag(forgot_mail_url, method: 'get', multipart: true, data: {abide: true}) do %>
 
       <div>
-        <%= text_field_tag :email, nil, placeholder: "Enter your e-mail address...", class: "field-check", required:true, pattern: "email"%>
+        <%= email_field_tag :email, nil, placeholder: "Enter your e-mail address...", class: "field-check", required:true, pattern: "email"%>
 
         <small class="error">*Your e-mail doesnt look right...</small>
       </div>
@@ -15,6 +15,7 @@
 
     <div>
       <%= submit_tag "Submit", class: "submit" %>
+
     </div>
   <% end %>
 
